Fixed overflowing images on index page

--- a/styles/SaleCategory.module.css
+++ b/styles/SaleCategory.module.css
@@ -3,12 +3,14 @@
   height: 300px;
   flex-shrink: 0;
   border-radius: 8px;
+  overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
   background-color: white;
   border: 1px solid #969696;
   display: flex;
   flex-direction: column;
   margin-right: 20px;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .SaleCategoryImage {
